# cargo-caps

./: .cargo-caps.eon  .gitignore  .typos.toml  Cargo.toml  README.md  bootstrap.sh  cargo-caps.eon  test_caps.sh  todo.md
.github/workflows/: rust.yml
crates/capabara/: Cargo.toml
crates/capabara/src/: cap_rule.rs  capability.rs  crate_name.rs  default_rules.ron  demangle.rs  lib.rs  main.rs  print.rs  rlib.rs  rust_path.rs  symbol.rs  tree.rs
crates/cargo-caps/: Cargo.toml
crates/cargo-caps/src/: analyzer.rs  build_graph_analysis.rs  cap_rule.rs  capability.rs  checker.rs  config.rs  crate_name.rs  default_rules.eon  default_rules.ron  demangle.rs  info.rs  lib.rs  main.rs  print.rs  reservoir_sample.rs  rust_path.rs  rust_type.rs  src_analysis.rs  symbol.rs  tree.rs
crates/cargo-caps/src/commands/: build.rs  caps.rs  check.rs  graph_analysis.rs  init.rs  mod.rs  symbols.rs
crates/test_caps/: Cargo.toml
crates/test_caps/src/: lib.rs
