[package]
name = "capabara"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true



[dependencies]
anyhow = "1.0"
ar = "0.9"
clap = { version = "4.0", features = ["derive"] }
cpp_demangle = "0.4"
log-once = "0.4.1"
object = "0.37.3"
ron = "0.8"
rustc-demangle = "0.1"
serde = { version = "1.0", features = ["derive"] }
