[package]
name = "capabara"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true



[dependencies]
anyhow.workspace = true
ar.workspace = true
clap.workspace = true
cpp_demangle.workspace = true
log-once.workspace = true
object.workspace = true
ron.workspace = true
rustc-demangle.workspace = true
serde.workspace = true
