[package]
name = "cargo-caps"
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
ar.workspace = true
cargo_metadata.workspace = true
clap.workspace = true
cpp_demangle.workspace = true
itertools.workspace = true
log-once.workspace = true
object.workspace = true
petgraph.workspace = true
ron.workspace = true
rustc-demangle.workspace = true
serde.workspace = true
serde_json.workspace = true

[[bin]]
name = "cargo-caps"
path = "src/main.rs"
