[package]
name = "cargo-caps"

readme = "../../README.md"

categories = ["security"]
description = "Audit what a crate is capable of by analyzing what linker symbols it emits"
keywords = ["crates", "capabilities", "security"]
publish = true

authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[[bin]]
name = "cargo-caps"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
ar.workspace = true
cargo_metadata.workspace = true
clap.workspace = true
cpp_demangle.workspace = true
eon.workspace = true
itertools.workspace = true
log-once.workspace = true
object.workspace = true
petgraph.workspace = true
rand.workspace = true
regex.workspace = true
rustc-demangle.workspace = true
serde_json.workspace = true
serde.workspace = true
syn = { workspace = true, features = ["full", "visit"] }
proc-macro2 = { version = "1.0.101", features = ["span-locations"] }
