[package]
name = "test_caps"
publish = false
edition.workspace = true
rust-version.workspace = true
version.workspace = true

[features]
default = []
panic = []
alloc = []
time = []
signal = []
sysinfo = []
stdio = []
thread = []
net = []
fread = []
fwrite = []
all = [
    "panic",
    "alloc",
    "time",
    "signal",
    "sysinfo",
    "stdio",
    "thread",
    "net",
    "fread",
    "fwrite",
]
